--- a/4_Train_Model.ipynb
+++ b/4_Train_Model.ipynb
@@ -7,22 +7,29 @@
     "# Train the StarNet Model\n",
     "\n",
     "This notebook takes you through the steps of how to train a StarNet Model\n",
-    "- Required Python packages: `numpy h5py keras sklearn`\n",
+    "- Required Python packages: `numpy h5py keras`\n",
     "- Required data files: training_data.h5, mean_and_std.npy\n",
     "\n",
-    "Note: We use tensorflow for the keras backend. For error propagation, the model must be trained with Theano as the backend, although this has been found to be much slower without the proper set-up of Theano"
+    "Note: We use tensorflow for the keras backend."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import h5py\n",
+    "import random\n",
     "\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, InputLayer, Flatten\n",
@@ -30,7 +37,6 @@
     "from keras.layers.convolutional import MaxPooling1D\n",
     "from keras.optimizers import Adam\n",
     "from keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
-    "from sklearn.model_selection import StratifiedKFold\n",
     "\n",
     "datadir = '/home/ubuntu/starnet_data/'"
    ]
@@ -39,121 +45,139 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Load data for normalizing labels**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "mean_and_std = np.load(datadir + 'mean_and_std.npy')\n",
-    "mean_labels = mean_and_std[0]\n",
-    "std_labels = mean_and_std[1]\n",
-    "num_labels = mean_and_std.shape[1]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "** Normalize labels**\n",
+    "** Batch the Training Data **\n",
     "\n",
-    "Define function to normalize labels to approximately have a mean of zero and unit variance\n",
-    "NOTE: this is necessary to put output labels on a similar scale in order for the model to train properly, this process is reversed in the test stage to give the output labels their proper units"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def normalize(lb):\n",
-    "    return (lb-mean_labels) / std_labels"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "** Obtain reference set**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "training_set = 'training_data.h5'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with h5py.File(datadir + training_set, 'r') as F:\n",
-    "    spectra = F['spectra'][:]\n",
-    "    labels = np.column_stack((F['TEFF'][:],F['LOGG'][:],F['FE_H'][:]))\n",
-    "    labels = normalize(labels)\n",
-    "print('Reference set includes ' + str(len(spectra)) + ' individual visit spectra.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# define the number of wavelength bins, i.e. flux values\n",
-    "num_flux = spectra.shape[1]\n",
-    "print('Each spectra contains ' + str(num_flux) + ' wavelength bins')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Randomize order and separate into training and cross-validation sets**\n",
+    "Define a function that will return a batch of data from an h5 file in the form of an HDF5 matrix. This enables the user to only load a batch of spectra at a time while training.\n",
     "\n",
-    "We shuffle around the data to avoid local effects. The data is then split the reference set into training and cross-validation sets"
+    "Within this function the labels will be normalized to approximately have a mean of zero and unit variance.\n",
+    "\n",
+    "NOTE: This is necessary to put output labels on a similar scale in order for the model to train properly, this process is reversed in the test stage to give the output labels their proper units"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# number of spectra used in training\n",
+    "def load_batch_from_h5(data_file, num_objects, batch_size, indx, mu_std=''):\n",
+    "        \n",
+    "        mean_and_std = np.load(mu_std)\n",
+    "        mean_labels = mean_and_std[0]\n",
+    "        std_labels = mean_and_std[1]\n",
+    "            \n",
+    "        # Generate list of random indices (within the relevant partition of the main data file, e.g. the\n",
+    "        # training set) to be used to index into data_file\n",
+    "        indices = random.sample(range(indx, indx+num_objects), batch_size)\n",
+    "        indices = np.sort(indices)\n",
+    "        \n",
+    "        # load data\n",
+    "        F = h5py.File(data_file, 'r')\n",
+    "        X = F['spectrum']\n",
+    "        teff = F['TEFF']\n",
+    "        logg = F['LOGG']\n",
+    "        fe_h = F['FE_H']\n",
+    "        \n",
+    "        X = X[indices,:]\n",
+    "        \n",
+    "        y = np.column_stack((teff[:][indices],\n",
+    "                                 logg[:][indices],\n",
+    "                                 fe_h[:][indices]))\n",
+    "        \n",
+    "        # Normalize labels\n",
+    "        normed_y = (y-mean_labels) / std_labels\n",
+    "        \n",
+    "        # Reshape X data for compatibility with CNN\n",
+    "        X = X.reshape(len(X), 7214, 1)\n",
+    "        \n",
+    "        return X, normed_y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Create Batch Generators for the Training and Cross-Validation Data **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def generate_train_batch(data_file, num_objects, batch_size, indx, mu_std):\n",
+    "    \n",
+    "    while True:\n",
+    "        x_batch, y_batch = load_batch_from_h5(data_file, \n",
+    "                                                   num_objects, \n",
+    "                                                   batch_size, \n",
+    "                                                   indx, \n",
+    "                                                   mu_std)\n",
+    "        yield (x_batch, y_batch)\n",
+    "\n",
+    "def generate_cv_batch(data_file, num_objects, batch_size, indx, mu_std):\n",
+    "    \n",
+    "    while True:\n",
+    "        x_batch, y_batch = load_batch_from_h5(data_file, \n",
+    "                                                   num_objects, \n",
+    "                                                   batch_size, \n",
+    "                                                   indx, \n",
+    "                                                   mu_std)\n",
+    "        yield (x_batch, y_batch)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Obtain information from the reference set and the normalization data**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "training_set = 'training_data.h5'\n",
+    "normalization_data = 'mean_and_std.npy'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Each spectrum contains 7214 wavelength bins\n",
+      "Training set includes 41000 spectra and the cross-validation set includes 3784 spectra\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the number of output labels\n",
+    "num_labels = np.load(datadir+'mean_and_std.npy').shape[1]\n",
+    "\n",
+    "# Define the number of training spectra\n",
     "num_train = 41000\n",
-    "# SF: use the whole set to do k-fold validation\n",
-    "# num_train = len(spectra)\n",
     "\n",
-    "reference_data = np.column_stack((spectra, labels))\n",
-    "np.random.shuffle(reference_data)\n",
-    "\n",
-    "train_spectra = reference_data[0:num_train, 0:num_flux]\n",
-    "train_spectra = train_spectra.reshape(train_spectra.shape[0], train_spectra.shape[1], 1)\n",
-    "train_labels = reference_data[0:num_train, num_flux:]\n",
-    "\n",
-    "cv_spectra = reference_data[num_train:, 0:num_flux]\n",
-    "cv_spectra = cv_spectra.reshape(cv_spectra.shape[0], cv_spectra.shape[1], 1)\n",
-    "cv_labels = reference_data[num_train:, num_flux:]\n",
-    "\n",
-    "print('Training set includes ' + str(len(train_spectra)) + ' spectra and the cross-validation set includes ' + str(len(cv_spectra))+' spectra')"
+    "#with h5py.File(datadir + training_set, 'r') as F:\n",
+    "with h5py.File(datadir+training_set, 'r') as F:\n",
+    "    spectra = F['spectrum']\n",
+    "    num_flux = spectra.shape[1]\n",
+    "    num_cv = spectra.shape[0]-num_train\n",
+    "print('Each spectrum contains ' + str(num_flux) + ' wavelength bins')\n",
+    "print('Training set includes ' + str(num_train) + ' spectra and the cross-validation set includes ' + str(num_cv)+' spectra')"
    ]
   },
   {
@@ -174,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -222,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -252,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -275,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -299,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -312,44 +336,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Train model**\n",
-    "\n",
-    "Apply k-folding (with 3-fold) cross validation test harness."
+    "**Train model**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# fix random seed for reproducibility\n",
-    "#seed = 7\n",
-    "#np.random.seed(seed)\n",
-    "\n",
-    "# this stuff is still a bit buggy\n",
-    "#kfold = StratifiedKFold(n_splits=3, shuffle=True, random_state=seed)\n",
-    "#cv_scores = []\n",
-    "#for train, test in kfold.split(train_spectra, train_labels):\n",
-    "#    model.fit(train_spectra[train], train_labels[train], epochs=max_epochs, \n",
-    "#              batch_size=batch_size, callbacks=[reduce_lr,early_stopping],\n",
-    "#              verbose=2)\n",
-    "#    scores = model.evaluate(train_spectra[test], train_labels[test], verbose=2)\n",
-    "#    print(\"%s: %.2f%%\" % (model.metrics_names[1], scores[1]*100))\n",
-    "#    cv_scores.append(scores)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/30\n",
+      "72s - loss: 0.0562 - acc: 0.7963 - mean_absolute_error: 0.1433 - val_loss: 0.0148 - val_acc: 0.8819 - val_mean_absolute_error: 0.0720\n",
+      "Epoch 2/30\n",
+      "72s - loss: 0.0186 - acc: 0.8695 - mean_absolute_error: 0.0860 - val_loss: 0.0099 - val_acc: 0.8986 - val_mean_absolute_error: 0.0631\n",
+      "Epoch 3/30\n",
+      "72s - loss: 0.0114 - acc: 0.8906 - mean_absolute_error: 0.0699 - val_loss: 0.0112 - val_acc: 0.9052 - val_mean_absolute_error: 0.0704\n",
+      "Epoch 4/30\n",
+      "73s - loss: 0.0089 - acc: 0.9033 - mean_absolute_error: 0.0608 - val_loss: 0.0056 - val_acc: 0.9155 - val_mean_absolute_error: 0.0496\n",
+      "Epoch 5/30\n",
+      "72s - loss: 0.0060 - acc: 0.9121 - mean_absolute_error: 0.0531 - val_loss: 0.0059 - val_acc: 0.9012 - val_mean_absolute_error: 0.0571\n",
+      "Epoch 6/30\n",
+      "73s - loss: 0.0051 - acc: 0.9183 - mean_absolute_error: 0.0496 - val_loss: 0.0052 - val_acc: 0.9166 - val_mean_absolute_error: 0.0500\n",
+      "Epoch 7/30\n",
+      "72s - loss: 0.0049 - acc: 0.9226 - mean_absolute_error: 0.0491 - val_loss: 0.0057 - val_acc: 0.9198 - val_mean_absolute_error: 0.0484\n",
+      "Epoch 8/30\n",
+      "76s - loss: 0.0041 - acc: 0.9280 - mean_absolute_error: 0.0457 - val_loss: 0.0053 - val_acc: 0.9311 - val_mean_absolute_error: 0.0445\n",
+      "Epoch 9/30\n",
+      "72s - loss: 0.0044 - acc: 0.9280 - mean_absolute_error: 0.0460 - val_loss: 0.0057 - val_acc: 0.9349 - val_mean_absolute_error: 0.0497\n",
+      "Epoch 10/30\n",
+      "71s - loss: 0.0036 - acc: 0.9333 - mean_absolute_error: 0.0427 - val_loss: 0.0057 - val_acc: 0.9364 - val_mean_absolute_error: 0.0448\n",
+      "Epoch 11/30\n",
+      "72s - loss: 0.0037 - acc: 0.9327 - mean_absolute_error: 0.0438 - val_loss: 0.0045 - val_acc: 0.9399 - val_mean_absolute_error: 0.0412\n",
+      "Epoch 12/30\n",
+      "72s - loss: 0.0033 - acc: 0.9371 - mean_absolute_error: 0.0412 - val_loss: 0.0046 - val_acc: 0.9253 - val_mean_absolute_error: 0.0470\n",
+      "Epoch 13/30\n",
+      "\n",
+      "Epoch 00012: reducing learning rate to 0.00034999998752.\n",
+      "73s - loss: 0.0030 - acc: 0.9390 - mean_absolute_error: 0.0394 - val_loss: 0.0068 - val_acc: 0.9179 - val_mean_absolute_error: 0.0609\n",
+      "Epoch 14/30\n",
+      "73s - loss: 0.0025 - acc: 0.9459 - mean_absolute_error: 0.0350 - val_loss: 0.0043 - val_acc: 0.9298 - val_mean_absolute_error: 0.0400\n",
+      "Epoch 15/30\n",
+      "71s - loss: 0.0021 - acc: 0.9466 - mean_absolute_error: 0.0333 - val_loss: 0.0038 - val_acc: 0.9391 - val_mean_absolute_error: 0.0390\n",
+      "Epoch 16/30\n",
+      "71s - loss: 0.0020 - acc: 0.9492 - mean_absolute_error: 0.0330 - val_loss: 0.0028 - val_acc: 0.9428 - val_mean_absolute_error: 0.0378\n",
+      "Epoch 17/30\n",
+      "\n",
+      "Epoch 00016: reducing learning rate to 0.00017499999376.\n",
+      "72s - loss: 0.0020 - acc: 0.9487 - mean_absolute_error: 0.0327 - val_loss: 0.0029 - val_acc: 0.9401 - val_mean_absolute_error: 0.0370\n",
+      "Epoch 18/30\n",
+      "72s - loss: 0.0015 - acc: 0.9519 - mean_absolute_error: 0.0291 - val_loss: 0.0030 - val_acc: 0.9401 - val_mean_absolute_error: 0.0360\n",
+      "Epoch 19/30\n",
+      "71s - loss: 0.0015 - acc: 0.9520 - mean_absolute_error: 0.0291 - val_loss: 0.0030 - val_acc: 0.9468 - val_mean_absolute_error: 0.0373\n",
+      "Epoch 20/30\n",
+      "72s - loss: 0.0015 - acc: 0.9521 - mean_absolute_error: 0.0286 - val_loss: 0.0028 - val_acc: 0.9399 - val_mean_absolute_error: 0.0351\n",
+      "Epoch 21/30\n",
+      "\n",
+      "Epoch 00020: reducing learning rate to 8.74999968801e-05.\n",
+      "71s - loss: 0.0015 - acc: 0.9541 - mean_absolute_error: 0.0284 - val_loss: 0.0031 - val_acc: 0.9391 - val_mean_absolute_error: 0.0351\n",
+      "Epoch 00020: early stopping\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7f7823282e10>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model.fit(train_spectra, train_labels, validation_data=(cv_spectra, cv_labels),\n",
-    "          epochs=max_epochs, batch_size=batch_size, verbose=2,\n",
-    "          callbacks=[reduce_lr,early_stopping])"
+    "model.fit_generator(generate_train_batch(datadir+training_set, \n",
+    "                                         num_train, batch_size, 0, \n",
+    "                                         datadir+normalization_data),\n",
+    "                                  steps_per_epoch = num_train/batch_size,\n",
+    "                                  epochs=max_epochs,\n",
+    "                                  validation_data=generate_cv_batch(datadir+training_set, \n",
+    "                                                                    num_cv, batch_size, num_train,\n",
+    "                                                                    datadir+normalization_data),\n",
+    "                                  max_q_size=10, verbose=2,\n",
+    "                                  callbacks=[early_stopping, reduce_lr],\n",
+    "                                 validation_steps=num_cv/batch_size)"
    ]
   },
   {
@@ -361,14 +433,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "starnet_cnn.h5 saved.\n"
+     ]
+    }
+   ],
    "source": [
     "starnet_model = 'starnet_cnn.h5'\n",
-    "model.save(datadir + starnet_model)"
+    "model.save(datadir + starnet_model)\n",
+    "print(starnet_model+' saved.')"
    ]
   }
  ],
