--- a/1_Download_Data.ipynb
+++ b/1_Download_Data.ipynb
@@ -14,7 +14,7 @@
     "| apStar_visits_main.h5 | 38.6GB | apStar individual visit spectra for training StarNet, created from the APOGEE DR13 |\n",
     "| apStar_combined_main.h5 | 10.3GB | apStar combined spectra for preprocessing StarNet, created by pulling apStar combined spectra from the APOGEE DR13 |\n",
     "| high_snr_test_apids.npy | 48kB | APOGEE IDs for high S/N test set to avoid downloading the much larger apStar_visits_main.h5 |\n",
-    "| training_set.h5 | 1.3GB | apStar individual visit spectra for training, useful to skip preprocessing |\n",
+    "| training_data.h5 | 1.3GB | apStar individual visit spectra for training, useful to skip preprocessing |\n",
     "| mean_and_std.npy | 104B |  mean and standard deviations for the stellar labels used during preprocessing |\n",
     "| high_snr_test_data.h5 | 0.2GB | High S/N apStar combined spectra test set |\n",
     "| low_snr_test_data.h5 | 1.1GB | Low S/N apStar combined spectra test set |\n",
