--- a/6_Error_Propagation.ipynb
+++ b/6_Error_Propagation.ipynb
@@ -35,7 +35,7 @@
     "import h5py\n",
     "import tensorflow as tf\n",
     "\n",
-    "datadir = '/data/stars/'"
+    "datadir='/home/ubuntu/starnet_data/' # or '/path/to/my/starnet/directory'"
    ]
   },
   {
